force-app/main/default/objects/Customer_Product_Info_Config__mdt/Customer_Product_Info_Config__mdt.object-meta.xml
<CustomObject>
    <description>Customer product information related to country</description>
    <label>Customer Product Info Config</label>
    <pluralLabel>Customer Product Info Configs</pluralLabel>
</CustomObject>