force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <description>Customer product  ATM Fee in Other Currencies</description>
    <label>ATM Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>