force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>Card Replacement Cost per each product</description>
    <label>Card Replacement Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>