force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country Code for customer product</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>