force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Name of the country related to product</description>
    <label>Home Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>