force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>Currency ISO Code</description>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>