force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Currency_Symbol__c</fullName>
    <description>Currency used per each Country</description>
    <label>Currency Symbol</label>
    <length>3</length>
    <type>Text</type>
</CustomField>