force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Is_Free_ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_ATM_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Free ATM Fee</label>
    <type>Checkbox</type>
</CustomField>