force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Is_Not_Applicable_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Applicable_Monthly_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the cost per calendar month is not applicable</description>
    <label>Is Not Applicable Monthly Cost</label>
    <type>Checkbox</type>
</CustomField>