force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cost__c</fullName>
    <description>Customer product cost per calendar month.</description>
    <label>Cost per Calendar Month</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>