force-app/main/default/objects/Customer_Product_Info_Config__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Customer product</description>
    <label>Plan Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>