force-app/main/default/objects/Customer_Product_Info_Config__mdt/listViews/General_Overview.listView-meta.xml
<ListView>
    <fullName>General_Overview</fullName>
    <columns>MasterLabel</columns>
    <columns>Product__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Currency_Symbol__c</columns>
    <columns>Monthly_Cost__c</columns>
    <columns>Is_Not_Applicable_Monthly_Cost__c</columns>
    <columns>Card_Replacement_Cost__c</columns>
    <columns>ATM_Fee__c</columns>
    <columns>Is_Free_ATM_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>General Overview</label>
    <language>en_US</language>
</ListView>